mule-user-guide/v/3.5/publishing-a-soap-api.adoc
= 发布一个SOAP API

*CXF Component*有助于在骡流内发布*SOAP APIs*。

Mule利用Apache的开源[CXF框架]构建API。您可以在Studio中创建CXF API，方法是在您的Mule流中配置CXF组件，以执行与发布SOAP API相关的以下任何CXF操作：

* 发布一个简单的服务
* 发布JAX-WS服务
* 代理已发布的服务

使用Mule的CXF组件，您还可以[启用WS安全性]，指定数据绑定，并将拦截器添加到您的CXF API。有关Mule如何利用CXF框架的更多信息，请查阅[CXF模块配置参考]。

== 假设

本文档描述了Anypoint Studio环境中的示例细节。 Mule ESB的图形用户界面（GUI）。在适当的情况下，XML配置伴随着Studio界面截图。本文档假定您熟悉Mule ESB和[Anypoint Studio界面]。

== 基本解剖学

通过Mule应用程序公开SOAP API始终需要至少三个元素：

接收请求并发送响应的. 和*endpoint*
引用和公开WSDL文件的.  a *CXF Component*
.  a *component*（或更可能是组件的组合）执行API支持的操作（检索数据，更新数据库中的数据等）
+
image:SOAP-flow1.png[SOAP-流1]
+
[%header%autowidth.spread]
|===
|元素 |说明
| *Endpoint*  |端点接收请求并发送包含XML SOAP信封的响应。通常，端点是HTTP，HTTPS，JMS或VM。
| *CXF component* a | SOAP API需要通过WSDL文件公开其合约。在执行请求时，通过向API的URL添加`?wsdl`来访问此文件的内容。

通过CXF，Mule允许您使用两种[方法]之一来呈现此WSDL合约，

.  *WSDL-first*：从您自己创建的WSDL文件开始，将其导入到您的Mule项目中，然后从CXF组件中引用其位置。

.  *Code-fist*：从带注释的Java类开始，然后让JAX-WS根据它编译WSDL文件。

无论您使用哪种方法，都可以指示CXF组件验证传入请求对WSDL的有效性。

CXF组件还允许您选择一种操作类型：

.  *Proxy Service*：允许您在流程中直接处理XML。因为它意味着更少的转换，所以在响应时间方面效率更高。使用它时：

* 您想要直接编辑XML
* 正在使用XSLT
* 您将使用DataMapper来映射字段

.  *JAX-WS*：将有效负载转换为POJO。 POJO中的属性在您的流程中更易于访问。使用它时：

* 您更喜欢使用Java对象
* 您需要构建POJO或JSON输出
* 您正在使用社区运行时并且无法使用DataMapper
* 希望通过代码优先的方式呈现WSDL（代理服务仅使用WSDL）
+
image:CXF-1.png[CXF-1]
+
image:CXF-2.png[CXF-2]
+
如果您使用的是简单的服务模式，则可以使用第三个选项*Simple Service*，但此处未涉及。
| *Processing Component*  |使用其他两个组件，您的流程已准备好处理请求并执行组成您的API的业务逻辑。您的API可能适用于单个Java类，但更可能包括使用多个元素，例如流控制，转换器，对Web服务的HTTP调用等。
|===

== 构建WSDL优先代理服务API

该过程假定您已经创建了您打算用于SOAP API的WSDL。为了探索此功能，可以使用[示例WSDL文件]。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Import a WSDL file into your project.

.. Select *File>Import*
.. Select *General > File System*.
.. Select the WSDL file from your file system, then, in the *Into Folder* field select `src/main/resources`.
.. Click *Finish*.

. Drag and drop an HTTP connector and a CXF component into a new flow on your canvas.
+
image:SOAPflow1.png[SOAPflow1]

. Configure the CXF component as per the image and table below.
+
image:CXF-3.png[CXF-3]
+
[%header%autowidth.spread]
|===
|Field |Value
|*Operation* |Proxy Service
|*Port* |Specify the port to which you wish to bind the WSDL
|*Payload* |Body
|===
+
The output of this component is byte array who's content depends upon the value you set in the *Payload* field.

* If you select *envelope*, then the message remains wrapped within the envelope in which it was originally received.
* If you selected *body*, then the message contains only the body, without its envelope.

. Configure the CXF component's *Advanced* settings as per the image and table below. (Read more about Advance Settings of the CXF Componenet).
+
image:CXFflow2.png[CXFflow2]
+
[%header%autowidth.spread]
|===
|Field |Value
|*WSDL Location* |Filepath of the WSDL in your Mule project.
a|*Soap 1.1*

OR

*Soap 1.2* |[Version of SOAP] you wish to use.
|===

. Drop Flow Reference after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API will be carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.
+
image:CXFflow3.png[CXFflow3]
+
As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformer, HTTP calls to Web services, etc. Where this is the case, you do not need to include a Java class; you can model, then configure your flow to perform the operations you SOAP API must support.

. Create a new flow and configure the Flow Reference component so that the *Flow Name* matches the name of this new flow. Then use other mule components to build you business logic flow.

. If you want direct access to the payload in you business logic flow, you must pass the message through an *XML-to-DOM transformer*
+
image:soapflow4.png[soapflow4]
+
Otherwise, you can use XPath expressions to parse parts of the payload when needed. For example, suppose that you only want to alter the message when a condition is met, you can implement a choice router that evaluates the condition based on XPath expression.

. Run you Mule project. Access the API by sending requests to the HTTP endpoint. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as [SOAPUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as [Postman] (Google Chrome), or the [curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
[tab,title="XML Editor or Standalone"]
....
. Import a WSDL file into your project:

.. Select *File > Import*
.. Select *General > File System*
.. Select the WSDL File from your file system, then, in the *Into Folder* field select `src/main/resources`.

. Create an `http:inbound-endpoint` in a new flow.
+
[source, xml, linenums]
----
<http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="Endpoint"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*exchange-pattern* |`request-response`
|*host* |`localhost`
|*port* |`8081`
|===

. Add a `cxf:proxy-service` element after the HTTP endpoint.
+
[source, xml, linenums]
----
<cxf:proxy-service doc:name="SOAP" payload="body" port="myAPI" service="myAPI" wsdlLocation="myAPI.wsdl"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*wsdlLocation* |The filepath of your WSDL in the Mule project
|*service* |`myAPI`
|*port* |`myAPI`
|*payload* |`body`
|===
+
The output of this component is a byte array who's content depends upon the value you set for the `payload` attribute.
+
* If you select *envelope*, then the message remains wrapped within the envelope in which it was originally received.
* If you selected *body*, then the message contains only the body, without its envelope.

. Create a `flow-ref` after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your APPI is carried out. Keep in mind that whatever happens in this second flow the returned output must match the output declared by the WSDL.
+
[source, xml, linenums]
----
<flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*name* |`business_logic_flow`
|*doc:name* |`Flow Reference`
|===
+
As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Through these elements, you can model, then configure your flow to perform the operations your SOAP API  must support.
+
[source, xml, linenums]
----
<flow name="business-logic_flow" doc:name="business-logic_flow">
     <!-- your business logic here -->
</flow>
----

. Create a new flow and name it with the value you assigned to the `flow-ref` attribute *Flow Name*. Then use other mule components to build your business logic inside flow.

. If you want direct access to the payload in your business-logic-flow, you must pass the message through a `mulexml:xml-to-dom-transformer`.
+
[source, xml, linenums]
----
<mulexml:xml-to-dom-transformer doc:name="XML to DOM"/>
----
+
Otherwise, you can use XPath expressions to parse parts of the payload when needed. For example, suppose that you only want to alter the message when a condition is met, you can implement a choice router that evaluates the condition based on an XPath expression.

. Run your Mule project. Access the API by sending requests to the HTTP endpoint. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as [SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use browser extension such as [Postman] (Google Chrome), or the [curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
------

=== 完整的WSDL-Frist示例

[NOTE]
====
为使此代码可执行，您必须在您的项目中包含：

* 一个WSDL文件
在业务逻辑流程中* 您独特的业务逻辑
====

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd">
 
    <flow name="SOAP_flow" doc:name="SOAP_flow">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="Endpoint"/>
        <cxf:proxy-service doc:name="SOAP" payload="body" port="myAPI" service="myAPI" wsdlLocation="myAPI.wsdl"/>
        <mulexml:dom-to-xml-transformer doc:name="DOM to XML"/>
        <flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
    </flow>
    <flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
</mule>
----

=== 高级示例

在Studio中创建一个*Mule Example Project*并选择模板*Service Orchestration and Choice Routing*。

== 构建一个WSDL-First JAX-WS API

此过程假定您已经创建了您打算用于SOAP API的WSDL。为了探索此功能，可以使用[示例WSDL文件]。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Import a WSDL file into your project.

.. Select *File > Import*.
.. Select *General > File System*.
.. Select the WSDL file from your file system, then, in the *Into Folder* field, select `src/main/resources`.
.. Click *Finish*.

. Drag and drop an HTTP connector and a CXF component into a new flow on your canvas.
+
image:SOAPflow1.png[SOAPflow1]

. Configure the *CXF component* as per the image and table below. At runtime, the output of this component is a POJO.
+
image:CXFex2.png[CXFex2]
+
[%header%autowidth.spread]
|===
|Field |Value
|*Operation* |JAX-WS service
|*Port* |`myAPI`
|*Service* |`myAPI`
|===

. Configure the CXF component's *Advanced* settings as per the image and table below.
+
image:OrderAPIadv.png[OrderAPIadv]
+
[%header%autowidth.spread]
|===
|Field |Value
|*WSDL Location* |Filepath of the WSDL in your Mule project.
a|*Soap 1.1*

OR

*Soap 1.2* |[Version of SOAP] you wish to use.
|===

. Drop a Flow Reference after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API will be carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.
+
image:OrderAPIflow.png[OrderAPIflow]
+
As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Where this is the case, you do not need to include a Java class; you can model, then configure your flow to perform the operations your SOAP API must support.

. Create a new flow and configure the Flow Reference component so that the *Flow Name* matches the name of this new flow. Then use other mule elements to build your business logic inside this flow.

. Run your Mule project. Access the API by sending requests to the HTTP endpoint. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as [SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as [Postman] (Google Chrome), or the [curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
[tab,title="XML Editor or Standalone"]
....
. Import a WSDL file into your project:

.. Select *File > Import*.
.. Select *General > File System*.
.. Select the WSDL File from your file system, then, in the *Into Folder* field, select  src/main/resources.
.. Click *Finish*.

. Add an `http:inbound-endpoint` in a new flow.
+
[source, xml, linenums]
----
<http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="Endpoint"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*exchange-pattern* |`request-response`
|*host* |`localhost`
|*port* |`8081`
|*doc:name* |`Endpoint`
|===

. Add a `cxf:jaxws-service` element after the HTTP endpoint. At runtime, the output of this component is a POJO.
+
[source, xml, linenums]
----
<cxf:jaxws-service doc:name="SOAP"  port="myService" service="myService" wsdlLocation="myAPI.wsdl"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*wsdlLocation* |The filepath of your WSDL in the Mule project
|*service* |`myService`
|*port* |`myService`
|*doc:name* |`SOAP`
|===

. Create a `flow-ref` after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API is carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.
+
[source, xml, linenums]
----
<flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*name* |`business-logic_flow`
|*doc:name* |`Flow Reference`
|===
+
As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Through these elements, you can model, then configure your flow to perform the operations your SOAP API must support.
+
[source, xml, linenums]
----
<flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
----

. Create a new flow and name it with the value you assigned to the `flow-ref` attribute *Flow Name*. Then use other mule components to build your business logic inside this flow.

. Run your Mule project. Access the API by sending requests to the HTTP endpoint. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as [SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as [Postman] (Google Chrome), or the [curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
------

=== 完整的WSDL-First示例

[NOTE]
====
为使此代码可执行，您必须在您的项目中包含：

* 一个WSDL文件
在业务逻辑流程中* 您独特的业务逻辑
====

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd">
 
    <flow name="SOAP_flow" doc:name="SOAP_flow">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="Endpoint"/>
        <cxf:jaxws-service doc:name="SOAP"  port="myService" service="myService" wsdlLocation="myAPI.wsdl"/>
        <flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
    </flow>
    <flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
</mule>
----

== 构建一个代码优先的JAX-WS API

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Create the Java class that implements the API.

.. In the Package Explorer, right click on the project name, then select *New > Class*.
.. Enter the class name, then click *Add*. Then use the filter to display, then select the *Interface Definition* you wish to use.
.. Click *Finish* to save your selection.
.. In the new tab that appears in Studio, create the definition for your API in the Java class, adding annotations that follow the [JAX-WS] specification.
+
[TIP]
====
If you already have a WSDL file for your API, you can import it, then automatically create a Java class based upon it.

.. Select *File > Import*.
.. Select *General > File System*.
.. Select the WSDL File from your file system, then, in the *Into Folder* field, select `src/main/resources`.
.. Click *Finish*.
====

. Build a flow with an *HTTP connector* and a *CXF component*.

. Configure the *CXF component* as per the image and table below. At runtime, the output of this component is a POJO.
+
image:newCXForderapi.png[newCXForderapi]
+
[%header%autowidth.spread]
|===
|Field |Value
|*Operation*	|JAX-WS service
|*Port*	|`myAPI`
|*Service* |`myAPI`
|*Service Class* |Specify the Java class you created
|===
+
[TIP]
====
Instead of building a Java class, you can import an existing WSDL file into your project, then use CXF to automatically build a Java class based upon it.

In the CXF component, click *Generate from WSDL*.

image:newCXForderapi-genfromwsdl.png[newCXForderapi-genfromwsdl]

Then, select either the *URL* of the WSDL or the full *filepath* of the WSDL (including WSDL extension) within the project. After Mule generates the classes, ensure the *Service Class* field points to the actual Service Interface Definition, not the Implementation Class.
====

. Drop a *Flow Reference* after your CXF component. This reference will redirect the requests to another flow, where the actual business logic of your API will be carried out. Keep in mind that whatever happens in this second flow, the returned output must match the output declared by the WSDL.
+
image:OrderAPIflow.png[OrderAPIflow]
+
As stated earlier, rather than fitting into a single Java class, your API's business logic may involve the use of several elements, such as flow controls, transformers, HTTP calls to Web services, etc. Where this is the case, you do not need to include a Java class; you can model, then configure your flow to perform the operations your SOAP API must support.

. Create a new flow and configure the Flow Reference component so that the *Flow Name* matches the name of this new flow. Then use other mule components to build your business logic inside this flow.

. Run your Mule project. Access the API by sending requests to the HTTP endpoint. Include a SOAP envelope in the body.
+
[TIP]
====
To make SOAP requests to send to your SOAP API, use a free service such as [SoapUI] which automatically provides the SOAP message structure you need for each kind of request to the API.

Alternatively, you can use a browser extension such as [Postman] (Google Chrome), or the [curl] command line utility to send SOAP requests. To use these, you must know the required structure of the requests.
====
....
------

=== 完整的Code-First JAX-WS示例

[NOTE]
====
为使此代码可执行，您必须在您的项目中包含：

* 构造WSDL的Java类
在业务逻辑流程中* 您独特的业务逻辑
====

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
 
    <flow name="SOAP_flow" doc:name="SOAP_flow">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="Endpoint"/>
        <cxf:jaxws-service doc:name="SOAP"  port="myService" service="myService"  serviceClass="com.mulesoft.myService.myClass"/>
        <flow-ref name="business-logic_flow" doc:name="Flow Reference"/>
    </flow>
    <flow name="business-logic_flow" doc:name="business-logic_flow">
         <!-- your business logic here -->
    </flow>
</mule>
----

=== 高级示例

下载以下Studio项目，然后将其作为*Mule Studio generated Deployable Archive (.zip)*导入：

[T-Shirt SOAP Service Project]

[NOTE]
请注意，对于要部署的示例，您必须在kissmetrics.properties中添加您自己的Kissmetrics API密钥，并在postgresql.properties中添加您自己的数据库引用和凭证。如果没有这些，您仍然可以检查流程以了解最佳做法。

对于另一个示例，请在Studio中创建一个*Mule Example Project*并选择模板*Service Orchestration and Choice Routing*。

请注意这些示例中的路由是如何为不同的操作执行的。还要注意如何处理异常。

== 添加安全性_（企业）_

为了保护Mule流中的SOAP API，您可以配置CXF组件中的元素以应用WS安全性。您可以添加[WS-Security] *Configuration Elements*（即键值对）来验证和/或验证消息的SOAP头中的信息;您还可以启用六个*Token Validators*中的一个或多个以确保消息安全。添加这些安全功能的功能仅在企业版Mule中可用。

请参阅[保护SOAP API]文档以配置API的安全元素。

== 另请参阅

* 请参阅[CXF组件参考]。
* 阅读关于代码优先的SOAP实现的[博客文章]。
* 阅读另一篇博客文章，解释*XML-only SOAP Web Service*模板。
* 了解将Java类变为WSDL所需的[JAX-WS]注释。
* 学习如何使用Mule [代理SOAP API]。
